test: StreamReduceTest